--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -26,14 +26,14 @@
                     @if (!string.IsNullOrEmpty(Network))
                     {
                         <div class="mt-4 mb-0">
-                            <MudChip Color="Color.Secondary" Variant="Variant.Text" Size="Size.Small">NETWORK: @Network</MudChip>
+                            <MudChip Color="Color.Secondary" Variant="Variant.Filled" Size="Size.Small">NETWORK: @Network</MudChip>
                         </div>
                     }
 
                     @if (!string.IsNullOrEmpty(RpcUrl))
                     {
                         <div>
-                            <MudChip Color="Color.Secondary" Variant="Variant.Text" Size="Size.Small">RPC: @RpcUrl</MudChip>
+                            <MudChip Color="Color.Secondary" Variant="Variant.Filled" Size="Size.Small">RPC: @RpcUrl</MudChip>
                         </div>
                     }
 
