--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -14,14 +14,14 @@
         @if (!DrawerOpen)
         {
             <MudDrawerHeader Class="pt-2 px-4">
-                <MudText Typo="Typo.h4" Color="Color.Primary" Align="Align.Center" Class="text-lobster my-1">L</MudText>
+                <MudText Typo="Typo.h4" Color="Color.Primary" Align="Align.Center" Class="text-logo my-1">L</MudText>
             </MudDrawerHeader>
         }
         else
         {
             <MudDrawerHeader>
                 <div>
-                    <MudText Typo="Typo.h4" Color="Color.Primary" Class="text-lobster my-1">LatchBox</MudText>
+                    <MudText Typo="Typo.h4" Color="Color.Primary" Class="text-logo my-1">LatchBox</MudText>
 
                     @if (!string.IsNullOrEmpty(Network))
                     {
