--- a/src/client/Client/wwwroot/css/app.css
+++ b/src/client/Client/wwwroot/css/app.css
@@ -33,6 +33,6 @@
     display: block;
 }
 
-.text-lobster {
-    font-family: "Lobster Two", "Montserrat"
+.text-logo {
+    font-family: "Skranji", "Helvetica"
 }
