Update Network to pull from config.json

--- a/src/client/Client/Shared/Components/AppBarContent.razor
+++ b/src/client/Client/Shared/Components/AppBarContent.razor
@@ -28,7 +28,7 @@
             </MudHidden>
         }
 
-        <MudMenu Class="ml-3" Label="Connected" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" StartIcon="@Icons.Material.Filled.ConnectedTv" EndIcon="@Icons.Material.Filled.KeyboardArrowDown" Variant="Variant.Filled" Color="Color.Primary">
+        <MudMenu Class="ml-3" Label="Connected" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" StartIcon="@Icons.Material.Filled.ConnectedTv" EndIcon="@Icons.Material.Filled.KeyboardArrowDown" Variant="Variant.Filled" Color="Color.Secondary">
             <ChildContent>
                 @if (IsPlatformTokenLoaded && IsPlatformTokenOnSale)
                 {
