--- a/src/client/Client/Pages/Vestings/Modals/UpsetVestingPeriodModal.razor
+++ b/src/client/Client/Pages/Vestings/Modals/UpsetVestingPeriodModal.razor
@@ -20,7 +20,7 @@
                             </MudItem>
 
                             <MudItem xs="12">
-                                <MudDatePicker Label="Unlock Date (EOD in UTC)" For="@(() => Model.UnlockDate)" Variant="Variant.Outlined" Disabled="IsProcessing" MinDate="@MinDateValue" @bind-Date="Model.UnlockDate" />
+                                <MudDatePicker Label="Unlock Date (EOD in GMT)" For="@(() => Model.UnlockDate)" Variant="Variant.Outlined" Disabled="IsProcessing" MinDate="@MinDateValue" @bind-Date="Model.UnlockDate" />
                             </MudItem>
 
                             <MudItem xs="12">
